--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "normalize.css": "^4.1.1",
     "react-overlays": "^0.6.3",
     "react-responsive": "^1.1.3",
+    "react-scroll": "^1.0.24",
     "velocity-react": "^1.1.5"
   }
 }
