--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "compile": "",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
-    "build": "NODE_ENV=production webpack --progress --colors"
+    "start": "cross-env NODE_ENV=development webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
+    "build": "cross-env NODE_ENV=production webpack --progress --colors"
   },
   "license": "MIT",
   "devDependencies": {
@@ -21,6 +21,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.5.0",
     "classnames": "^2.2.3",
+    "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^8.0.0",
