--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "react-router-redux": "^4.0.0",
+    "react-sticky": "^5.0.4",
     "redux": "^3.3.1",
     "redux-actions": "^0.9.1",
     "rucksack-css": "^0.8.5",
