--- a/package.json
+++ b/package.json
@@ -6,54 +6,58 @@
   "main": "index.js",
   "scripts": {
     "compile": "",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
-    "build": "cross-env NODE_ENV=production webpack --progress --colors"
+    "build": "cross-env NODE_ENV=production webpack --progress --colors",
+    "test": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register client/**/*.spec.jsx",
+    "test:watch": "npm run test --watch"
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.5.2",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.3",
-    "babel-plugin-transform-runtime": "^6.5.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.5.0",
-    "classnames": "^2.2.3",
+    "babel-runtime": "^6.11.6",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
-    "eslint": "^2.9.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-import": "^1.6.1",
-    "eslint-plugin-jsx-a11y": "^1.0.4",
-    "eslint-plugin-react": "^5.0.1",
-    "file-loader": "^0.8.5",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
+    "file-loader": "^0.9.0",
+    "mocha": "^3.0.2",
     "msops-css": "^0.1.0",
-    "postcss-loader": "^0.8.1",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
+    "postcss-loader": "^0.9.1",
+    "react-addons-test-utils": "^15.3.0",
     "react-hot-loader": "^1.3.0",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.0.0",
-    "react-router-redux": "^4.0.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.1",
+    "react-router-redux": "^4.0.5",
     "react-sticky": "^5.0.4",
-    "redux": "^3.3.1",
-    "redux-actions": "^0.9.1",
-    "rucksack-css": "^0.8.5",
-    "style-loader": "^0.13.0",
+    "redux": "^3.5.2",
+    "redux-actions": "^0.10.1",
+    "rucksack-css": "^0.8.6",
+    "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.7.1"
+    "webpack-hot-middleware": "^2.12.2"
   },
   "dependencies": {
+    "chai": "^3.5.0",
     "classnames": "^2.2.5",
-    "normalize.css": "^4.1.1",
-    "react-overlays": "^0.6.3",
-    "react-responsive": "^1.1.3",
-    "react-scroll": "^1.0.24",
+    "enzyme": "^2.4.1",
+    "normalize.css": "^4.2.0",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-overlays": "^0.6.6",
+    "react-responsive": "^1.1.4",
+    "react-scroll": "^1.2.0",
     "velocity-react": "^1.1.5"
   }
 }
