Working on fetching data...

--- a/package.json
+++ b/package.json
@@ -32,15 +32,7 @@
     "file-loader": "^0.9.0",
     "msops-css": "^0.1.0",
     "postcss-loader": "^0.13.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
     "react-hot-loader": "^3.0.0-beta.3",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.0",
-    "react-router-redux": "^4.0.5",
-    "react-sticky": "^5.0.5",
-    "redux": "^3.6.0",
-    "redux-actions": "^0.12.0",
     "rucksack-css": "^0.8.6",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
@@ -51,9 +43,18 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "normalize.css": "^4.2.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "react-overlays": "^0.6.6",
     "react-responsive": "^1.1.4",
     "react-scroll": "^1.4.0",
-    "velocity-react": "^1.1.5"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.0",
+    "react-router-redux": "^4.0.5",
+    "react-sticky": "^5.0.5",
+    "redux": "^3.6.0",
+    "redux-actions": "^0.12.0",
+    "velocity-react": "^1.1.5",
+    "whatwg-fetch": "^1.0.0"
   }
 }
